--- a/src/screens/home/home.css
+++ b/src/screens/home/home.css
@@ -14,3 +14,11 @@
     font-size: 12px;
     overflow: auto;
   }
+  .button-load {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  
+  }
